Fixes #8 - adding fix for firefox jumping fixed iamge bug

--- a/client/views/default/footer/footer.less
+++ b/client/views/default/footer/footer.less
@@ -4,12 +4,20 @@ article.default-layout footer.footer {
     display: table;
     width: 100%;
     padding: 40px;
-    background-attachment: fixed;
-    background-image: url(/images/pattern.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
     border-top: 4px solid #fff;
+
+    // hack for firefox, which has a bug that resizes images with background-attachment: fixed
+    // causing a 'jump' when the page loads
+    > .bg {
+        bottom: 0;
+        left: 0;
+        width: 100vw;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        background-image: url(/images/pattern.jpg);
+        z-index: -1;
+    }
 
     .content {
         display: table-cell;
